fix: improve task 1 solution to pass test with equal elements and boost performance as well